--- a/configs/projects/munit/bdd10k2bdd10k/ampO1_lower_LR.yaml
+++ b/configs/projects/munit/bdd10k2bdd10k/ampO1_lower_LR.yaml
@@ -146,7 +146,7 @@ test_data:
     test:
         is_lmdb: False
         roots:
-            - /mnt/raid/home/eyal_michaeli/datasets/bdd/bdd100k/test
+            - /mnt/raid/home/eyal_michaeli/datasets/bdd/bdd100k/train_10k  # test on train set, because want to get more training data
         # Batch size per GPU.
         batch_size: 1
         # If resize_h_w is not given, then it is assumed to be same as crop_h_w.
