--- a/configs/projects/munit/cs2cs/ampO1_lower_LR.yaml
+++ b/configs/projects/munit/cs2cs/ampO1_lower_LR.yaml
@@ -39,14 +39,14 @@ trainer:
         gain: 1
 gen_opt:
     type: adam
-    lr: 0.00005  # = 0.0001 (original LR that was used with 8 GPUS, i.e batch size = 8) / 8
+    lr: 0.00005  # = 0.0001 (original LR that was used with 8 GPUS, i.e batch size = 8) / 8  = 0.0001 / 8 = 0.0000125
     adam_beta1: 0.5
     adam_beta2: 0.999
     lr_policy:
         type: constant
 dis_opt:
     type: adam
-    lr: 0.00005 # = 0.0004 (original LR that was used with 8 GPUS, i.e batch size = 8) / 8
+    lr: 0.00005 # = 0.0004 (original LR that was used with 8 GPUS, i.e batch size = 8) / 8 = 0.0004 / 8 = 0.00005
     adam_beta1: 0.5
     adam_beta2: 0.999
     lr_policy:
@@ -152,5 +152,5 @@ test_data:
         batch_size: 1
         # If resize_h_w is not given, then it is assumed to be same as crop_h_w.
         augmentations:
-            resize_smallest_side: 512
+            resize_smallest_side: 256
             
